@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.723 2006/07/14 15:21:14 wiz Exp $
+$NetBSD: CHANGES-2006,v 1.724 2006/07/14 19:38:47 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -3376,3 +3376,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated time/kronolith to 2.1.2 [adrianp 2006-07-13]
 	Updated graphics/gimp24 to 2.3.10nb2 [wiz 2006-07-14]
 	Updated finance/gnucash-docs to 2.0.0 [wiz 2006-07-14]
+	Added pkgtools/pax version 20060202 [jlam 2006-07-14]
